--- a/phone.html
+++ b/phone.html
@@ -4,7 +4,11 @@
     <title></title>
 </head>
 <body>
-<a href="tel:8789056433" target="_blank">Call (555)123-4567</a>
+<input type="file" accept="image/*" id="file-input" capture="user">
+<!-- <script>
+  const fileInput = document.getElementById('file-input');
 
+  fileInput.addEventListener('change', (e) => doSomethingWithFiles(e.target.files));
+</script> -->
 </body>
 </html>
